<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/priv_note_page_padding">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewForNote"
        app:cardBackgroundColor="@color/black_200"
        android:layout_margin="@dimen/priv_note_cardView_margin"
        app:cardCornerRadius="@dimen/def_view_radius"
        android:layout_width="160dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/relative"
            android:padding="@dimen/priv_note_LinearLayout_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/priv_note_ImageView_size"
                    android:layout_height="@dimen/priv_note_ImageView_size"
                    android:src="@drawable/ic_del"
                    android:id="@+id/deleteNote"
                    android:contentDescription="@string/NoteDel" />

                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/noteDate"
                    android:textSize="@dimen/priv_note_noteDate_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_date"
                    android:textColor="@color/white" />

            </RelativeLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_title"
                android:textColor="@color/white"
                android:textSize="@dimen/priv_note_noteTitle_size"/>

            <TextView
                android:id="@+id/priv_noteContent"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_content"
                android:textColor="@color/white"
                android:textSize="@dimen/priv_note_noteContent_size"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/priv_note_cardView2_marginTop"
                android:layout_gravity="end"
                android:layout_width="@dimen/priv_note_cardView2_size"
                android:layout_height="@dimen/priv_note_cardView2_size"
                android:id="@+id/cardViewForImg"
                app:cardCornerRadius="@dimen/def_view_radius">

                <ImageView
                    android:id="@+id/noteImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/photo"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/note_image" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>