<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.noteActivity"
    android:id="@+id/noteBackGround">

    <include
        android:id="@+id/topBar"
        layout="@layout/appbar_note"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <LinearLayout
        android:padding="@dimen/page_margin"
        android:layout_below="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/def_view_radius">

            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add"
                android:id="@+id/noteImg"
                android:layout_width="@dimen/image_height"
                android:layout_height="@dimen/image_height"
                android:background="@drawable/img_add_back"
                android:contentDescription="@string/noteAddDesc" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:inputType="text"
            android:layout_marginTop="@dimen/title_top_margin"
            android:background="@android:color/transparent"
            android:id="@+id/EditNoteTitle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/title_size"
            android:hint="@string/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="@dimen/title_top_margin"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/note_date"
                android:id="@+id/currentDate"/>

        </LinearLayout>

        <EditText
            android:inputType="text"
            android:id="@+id/EditNoteContent"
            android:layout_marginTop="@dimen/title_top_margin"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/noteProgressBar"
        android:visibility="gone"
        android:layout_width="@dimen/progress_height"
        android:layout_height="@dimen/progress_height"/>


</RelativeLayout>